AD-2003-11-03-0: Bugfix.:   Using DENTER/DEXIT from within a signal handler
                            does lead to a deadlock.
                 Changed:   sig_handlers.c

AD-2003-10-30-1: Bugfix.:   MT initialization for 'qmon' was missing.
                 Changed:   qmon

AD-2003-10-30-0: Bugfix.:   MT initialization for sge_shepherd was incomplete.
                 Changed:   sge_shepherd

SG-2003-10-29-0: Bugfix.:   - SGE: sched config read in error on qmaster 
                                   startup
                            - SGE: no jobs were scheduled, fixed
                            - SGE(EE): removed error message: 
                            "object_type_free_master_list: has no master list 
                            to modify"
                 Changed:   schedd, qmaster

JG-2003-10-29-0: Bugfix:    bootstrap file was owned by root - it has to be 
                            owned by the admin_user in admin_user systems.

AD-2003-10-28-3: Bugfix.:   MT initialization for GDI was incomplete.
                 Changed:   gdi

AD-2003-10-28-2: Bugfix.:   MT initialization for 'commdcntl' was incomplete.
                 Changed:   commdcntl

AD-2003-10-28-1: Bugfix.:   MT initialization of bootstrap code was missing.
                 Changed:   japi

AD-2003-10-28-0: Bugfix:    Fixed the build. Modified shared objects link
                            flags for HP11.
                 Changed:   aimk

JG-2003-10-27-0: Cleanup:   Removed code writing the statistics file.

AD-2003-10-27-1: Bugfix:    Fixed build for AIX51

AD-2003-10-27-0: Bugfix:    Fixed 'commd' Makefile. 'libsec' was required,
                            even if built without '-secure'.

AD-2003-10-26-0: Bugfix:    fixed the build
                            Added MTFLAGS for HP11 and AIX51
                 Changed:   aimk

AD-2003-10-25-0: Bugfix:    fixed the build

AD-2003-10-24-1: Enhancem.: Added call to 'sge_mt_init()'.
                 Changed:   qstat
