@@ -218,6 +218,12 @@ sge_edit.o:	$(UTILIB_DIR)/sge_edit.c
 ###############################################################################
 # test targets
 ###############################################################################
+test_sge_dstring: test_sge_dstring.o $(UTILIB) $(RMONLIB)
+	$(LD_WRAPPER) $(CC) $(CFLAGS) -o test_sge_dstring $(LFLAGS) test_sge_dstring.o $(UTILIB) $(RMONLIB) $(LIBS)
+
+test_sge_dstring.o: $(UTILIB_DIR)/test_sge_dstring.c
+	$(CC) $(CFLAGS) -c $(UTILIB_DIR)/test_sge_dstring.c
+
 test_sge_profiling: test_sge_profiling.o $(UTILIB) $(RMONLIB)
 	$(LD_WRAPPER) $(CC) $(CFLAGS) -o test_sge_profiling $(LFLAGS) test_sge_profiling.o $(UTILIB) $(RMONLIB) $(LIBS)
 
