@@ -32,6 +32,8 @@
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
+
+#include "sge.h"
 #include "sgermon.h"
 #include "sge_dstring.h"
 
@@ -41,6 +43,25 @@
 #define DSTRING_LAYER BASIS_LAYER
 
 /* JG: TODO: Introduction uti/dstring/--Dynamic_String is missing */
+
+static void
+sge_dstring_allocate(dstring *sb, size_t request)
+{  
+   /* always request multiples of REALLOC_CHUNK */
+   size_t chunks = request / REALLOC_CHUNK + 1;
+   request = chunks * REALLOC_CHUNK;
+
+   /* set new size */
+   sb->size += request;
+
+   /* allocate memory */
+   if (sb->s != NULL) {
+      sb->s = realloc(sb->s, sb->size * sizeof(char));
+   } else {
+      sb->s = malloc(sb->size * sizeof(char));
+      sb->s[0] = '\0';
+   }
+}
 
 /****** uti/dstring/sge_dstring_append() **************************************
 *  NAME
@@ -64,68 +85,52 @@
 ******************************************************************************/
 const char* sge_dstring_append(dstring *sb, const char *a) 
 {
-   int n, m;
+   size_t len;  /* length of string a */
 
    DENTER(DSTRING_LAYER, "sge_dstring_append");
 
-   if (!sb) {
+   if (sb == NULL || a == NULL) {
       DEXIT;
       return NULL;
    }
 
-   if (!a) {
-      DEXIT;
-      return NULL;
-   }
-  
+   len = strlen(a);
+ 
    if (sb->is_static) {
-      n = strlen(a);
-      m = strlen(sb->s); 
-      if ( ((size_t)(m+n)) > sb->size )
-         n = (int)sb->size - m;
+      if ((sb->length + len) > sb->size )
+         len = sb->size - sb->length;
 
-/*       DPRINTF(("strncat(sb->s, \"%s\", %d)\n", a, n)); */
-      strncat(sb->s, a, n);
+      strncat(sb->s + sb->length, a, len);
+      sb->length += len;
    } else {
+      size_t required;
+
       /* only allow to append a string with length 0
          for memory allocation */
-      /* JG: TODO: strlen(a) is called more than once -> performance leak */
-      if (strlen(a) == 0 && sb->s != NULL ) {
+      if (len == 0 && sb->s != NULL ) {
          DEXIT;
          return sb->s;
       }
 
-      n = strlen(a) + 1 ;
-      if (sb->s == NULL) {
-         m = 1;
-      } else {
-         m = strlen(sb->s) + 1;
-      }  
-      if ( (m + n - 1 ) > sb->size ) {
-         if (n < REALLOC_CHUNK)
-            n = REALLOC_CHUNK; 
-         sb->size += n;
-         if (sb->s)
-            sb->s = realloc(sb->s, sb->size * sizeof(char)); 
-         else {
-            sb->s = malloc(sb->size * sizeof(char));
-            sb->s[0] = '\0';
-         }
-      }   
-      
-      strcat(sb->s, a);
+      required = len + sb->length + 1;
+
+      if (required > sb->size) {
+         sge_dstring_allocate(sb, required - sb->size);
+      }
+
+      strcat(sb->s + sb->length, a);
+      sb->length += len;
    }
+
    DEXIT;
    return sb->s;
 }
 
 const char* sge_dstring_append_char(dstring *sb, const char a)
 {
-   int n, m;
-
    DENTER(DSTRING_LAYER, "sge_dstring_append_char");
 
-   if (!sb) {
+   if (sb == NULL) {
       DEXIT;
       return NULL;
    }
@@ -136,35 +141,22 @@ const char* sge_dstring_append_char(dstring *sb, const char a)
    }
   
    if (sb->is_static) {
-      m = strlen(sb->s); 
-      if (((size_t)(m+1)) < sb->size ) {
-         sb->s[m] = a;
-         sb->s[m+1] = '\0';
+      if (sb->length < sb->size ) {
+         sb->s[sb->length++] = a;
+         sb->s[sb->length] = '\0';
       }
    } else {
-      /* JG: TODO: strlen(a) is called more than once -> performance leak */
-      n = 2 ;
-      if (sb->s == NULL) {
-         m = 1;
-      } else {
-         m = strlen(sb->s) + 1;
-      }  
-      if ( (m + n - 1 ) > sb->size ) {
-         if (n < REALLOC_CHUNK)
-            n = REALLOC_CHUNK; 
-         sb->size += n;
-         if (sb->s)
-            sb->s = realloc(sb->s, sb->size * sizeof(char)); 
-         else {
-            sb->s = malloc(sb->size * sizeof(char));
-            sb->s[0] = '\0';
-         }
-      }   
-      
-      m = strlen(sb->s);
-      sb->s[m] = a;
-      sb->s[m+1] = '\0';
+      size_t required = sb->length + 1 + 1;
+
+      if (required > sb->size) {
+         sge_dstring_allocate(sb, required - sb->size);
+      }
+
+      sb->s[sb->length++] = a;
+      sb->s[sb->length] = '\0';
    }
+
+   DEXIT;
    return sb->s;
 }
 
@@ -229,17 +221,23 @@ const char* sge_dstring_sprintf(dstring *sb, const char *format, ...)
 
    va_start(ap, format);
 
-   if (!format) {
-      return sb ? sb->s : NULL;
+   if (sb == NULL) {
+      return NULL;
+   }
+
+   if (format == NULL) {
+      return sb != NULL ? sb->s : NULL;
    }
 
    if (sb->is_static) {
       vsprintf(sb->s, format, ap);
-      return sb->s;
+      sb->length = strlen(sb->s);
    } else {
       vsprintf(buf, format, ap);
-      return sge_dstring_copy_string(sb, buf);
+      sge_dstring_copy_string(sb, buf);
    }
+
+   return sb->s;
 }
 
 /****** uti/dstring/sge_dstring_vsprintf() *************************************
@@ -274,16 +272,22 @@ const char* sge_dstring_vsprintf(dstring *sb, const char *format, va_list ap)
 {
    char buf[BUFFER_SIZE];
 
-   if (!format) {
-      return sb ? sb->s : NULL;
+   if (sb == NULL) {
+      return NULL;
+   }
+
+   if (format == NULL) {
+      return sb != NULL ? sb->s : NULL;
    }
    if (sb->is_static) {
       vsprintf(sb->s, format, ap);
-      return sb->s;
+      sb->length = strlen(sb->s);
    } else {
       vsprintf(buf, format, ap);
-      return sge_dstring_copy_string(sb, buf);
+      sge_dstring_copy_string(sb, buf);
    }
+
+   return sb->s;
 }
 
 /****** uti/dstring/sge_dstring_sprintf_append() ******************************
@@ -322,9 +326,13 @@ const char* sge_dstring_sprintf_append(dstring *sb, const char *format, ...)
    char buf[BUFFER_SIZE];
    va_list ap;
 
+   if (sb == NULL) {
+      return NULL;
+   }
+
    va_start(ap, format);
-   if (!format) {
-      return sb ? sb->s : NULL;
+   if (format == NULL) {
+      return sb != NULL ? sb->s : NULL;
    }
 
    vsprintf(buf, format, ap);
@@ -357,23 +365,11 @@ const char *sge_dstring_copy_string(dstring *sb, const char *str)
 
    DENTER(DSTRING_LAYER, "sge_dstring_copy_string");
 
-   if (sb == NULL) {
-      DEXIT;
-      return NULL;
+   if (sb != NULL) {
+      sge_dstring_clear(sb);
+      ret = sge_dstring_append(sb, str);
    }
 
-   if (sb->is_static) {
-      sb->s[0] = 0;
-   } else {
-      if (sb->s != NULL) {
-         sb->s[0] = 0;
-      }  
-      if (sb->s == NULL) {
-         sge_dstring_append(sb, "");
-      }
-   }
-
-   ret = sge_dstring_append(sb, str);
    DEXIT;
    return ret;
 }
@@ -402,20 +398,14 @@ const char *sge_dstring_copy_string(dstring *sb, const char *str)
 const char *sge_dstring_copy_dstring(dstring *sb1, const dstring *sb2) 
 {
    const char *ret = NULL;
+
    DENTER(DSTRING_LAYER, "sge_dstring_copy_dstring");
 
-   if (sb1->is_static) {
-      sb1->s[0] = 0;
-   } else {
-      if (sb1 != NULL && sb1->s != NULL) {
-         sb1->s[0] = 0;
-      }  
-      if (sb1 != NULL && sb1->s == NULL) {
-         sge_dstring_append(sb1, "");
-      }
+   if (sb1 != NULL) {
+      sge_dstring_clear(sb1);
+      ret = sge_dstring_append(sb1, sge_dstring_get_string(sb2));
    }
 
-   ret = sge_dstring_append(sb1, sge_dstring_get_string(sb2));
    DEXIT;
    return ret;
 }
@@ -438,10 +428,11 @@ const char *sge_dstring_copy_dstring(dstring *sb1, const dstring *sb2)
 ******************************************************************************/
 void sge_dstring_free(dstring *sb) 
 {
-   if (sb && !sb->is_static && sb->s ) {
+   if (sb != NULL && !sb->is_static && sb->s != NULL) {
       free(sb->s);
       sb->s = NULL;
       sb->size = 0;
+      sb->length = 0;
    }
 }   
 
@@ -466,13 +457,11 @@ void sge_dstring_clear(dstring *sb)
    if (sb == NULL)
       return;
 
-   if (sb->is_static) {
-      sb->s[0] = 0;
-   } else {
-      if (sb->s) {
-         sb->s[0] = 0;
-      }
+   if (sb->s != NULL) {
+      sb->s[0] = '\0';
    }
+
+   sb->length = 0;
 }   
 
 /****** uti/dstring/sge_dstring_get_string() **********************************
@@ -496,9 +485,9 @@ void sge_dstring_clear(dstring *sb)
 *  RESULT
 *     const char* - pointer to string buffer
 *******************************************************************************/
-const char *sge_dstring_get_string(const dstring *string)
+const char *sge_dstring_get_string(const dstring *sb)
 {
-   return (string != NULL) ? string->s : NULL;
+   return (sb != NULL) ? sb->s : NULL;
 }
 
 
@@ -521,16 +510,15 @@ const char *sge_dstring_get_string(const dstring *string)
 *  RESULT
 *     size_t - string length
 *******************************************************************************/
-size_t sge_dstring_strlen(const dstring *string)
+size_t sge_dstring_strlen(const dstring *sb)
 {
-   size_t len = 0;
+   size_t ret = 0;
 
-   DENTER(DSTRING_LAYER,"sge_dstring_strlen");
-   if (string != NULL && string->s != NULL) {
-      len = strlen(string->s);
+   if (sb != NULL) {
+      ret = sb->length;
    }
-   DEXIT;
-   return len;
+
+   return ret;
 }
 
 /****** uti/dstring/sge_dstring_remaining() **************************************
@@ -552,18 +540,19 @@ size_t sge_dstring_strlen(const dstring *string)
 *  RESULT
 *     size_t - remaining chars
 *******************************************************************************/
-size_t sge_dstring_remaining(const dstring *string)
+size_t sge_dstring_remaining(const dstring *sb)
 {
-   DENTER(DSTRING_LAYER,"sge_dstring_remaining");
+   size_t ret = 0;
 
-   if (string && string->is_static) {
-      int n = string->size - strlen(string->s);
-      DEXIT;
-      return (n<0)?0:n;
-   } else {
-      DEXIT;
-      return 100000;
+   if (sb != NULL) {
+      if (sb->is_static) {
+         ret = sb->size - sb->length;
+      } else {
+         ret = MAX_ULONG32;
+      }
    }
+
+   return ret;
 }
 
 /****** uti/dstring/sge_dstring_init() **************************************
@@ -585,17 +574,15 @@ size_t sge_dstring_remaining(const dstring *string)
 *  RESULT
 *     size_t - remaining chars
 *******************************************************************************/
-void sge_dstring_init(dstring *string, char *s, size_t size)
+void sge_dstring_init(dstring *sb, char *s, size_t size)
 {
-   if (!string || !s)
-      return;
-
-   string->is_static = 1;
-   string->size = size-1;
-   string->s = s;
-   string->s[0] = 0;
-
-   return;
+   if (sb != NULL && s != NULL) {
+      sb->is_static = true;
+      sb->length = 0;
+      sb->size = size - 1;   /* leave space for trailing 0 */
+      sb->s = s;
+      sb->s[0] = '\0';
+   }
 }
 
 
